[package]
name = "queues-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
dashmap = "6.1.0"
dlv-list = { path = "libs/dlv-list", features = ["std"] }
env_logger = "0.11.5"
futures = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.22"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.214", features = ["alloc", "derive", "rc"] }
serde_json = "1.0.132"
serde_with = { version = "3.11.0", features = ["hex"] }
sled = "0.34.7"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }

[[bin]]
name = "exploit_storage"

[[bin]]
name = "worker"

[[bin]]
name = "client"

[[bin]]
name = "collector"
